syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "dev.yambay.grpc.api";

message PayloadRequest{
  string uuid = 1;
}
message PayloadResponse {
  string uuid = 1;
  google.protobuf.Timestamp timestamp = 2;
}

service PayloadService {
  rpc getPayload(PayloadRequest) returns (PayloadResponse) {};
}
